--- a/index.html
+++ b/index.html
@@ -235,5 +235,6 @@
     </template>
 
     <script type="module" src="./js/main.js"></script>
+    <script src="./js/functions.js"></script>
 </body>
 </html>
